--- a/config.plist
+++ b/config.plist
@@ -317,86 +317,82 @@
 			</dict>
 			<dict>
 				<key>Comment</key>
-				<string>在Brcm4360驱动中添加BCM94352z的设备ID：0x43b114e4</string>
+				<string>AirPortBrcm4360</string>
 				<key>Disabled</key>
 				<false/>
 				<key>Find</key>
-				<string>pci14e4,43a0</string>
-				<key>InfoPlistPatch</key>
-				<true/>
-				<key>MatchOS</key>
-				<string>10.12.x</string>
+				<data>
+				gflSqgAAdSk=
+				</data>
 				<key>Name</key>
 				<string>AirPortBrcm4360</string>
 				<key>Replace</key>
-				<string>pci14e4,43b1</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>初始化fvco以加载BCM4360驱动[10.12.x] - Darkvoid</string>
-				<key>Disabled</key>
-				<false/>
-				<key>Find</key>
-				<data>
-				gflSqgAAdSk=
-				</data>
-				<key>MatchOS</key>
-				<string>10.12.x</string>
-				<key>Name</key>
-				<string>com.apple.driver.AirPort.Brcm4360</string>
-				<key>Replace</key>
 				<data>
 				gflSqgAAZpA=
 				</data>
 			</dict>
 			<dict>
 				<key>Comment</key>
-				<string>在Brcm4360驱动中添加BCM94352z的设备ID：0x43b114e4</string>
-				<key>Disabled</key>
-				<false/>
-				<key>Find</key>
-				<string>pci14e4,43a0</string>
-				<key>InfoPlistPatch</key>
-				<true/>
-				<key>MatchOS</key>
-				<string>10.13.x</string>
-				<key>Name</key>
-				<string>AirPortBrcmNIC</string>
-				<key>Replace</key>
-				<string>pci14e4,43b1</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>初始化fvco以加载BCM4360驱动[10.13.x]</string>
+				<string>AirPortBrcm4360 Patch 1</string>
 				<key>Disabled</key>
 				<false/>
 				<key>Find</key>
 				<data>
-				gflSqgAAdSk=
+				QTnEdRs=
 				</data>
-				<key>MatchOS</key>
-				<string>10.13.x</string>
 				<key>Name</key>
-				<string>AirPortBrcmNIC</string>
+				<string>AirPortBrcm4360</string>
 				<key>Replace</key>
 				<data>
-				gflSqgAAZpA=
+				QTnEZpA=
 				</data>
 			</dict>
 			<dict>
 				<key>Comment</key>
-				<string>10.11+-BT4LE-Handoff-Hotspot-lisai9093</string>
+				<string>AirPortBrcm4360 Patch 3</string>
 				<key>Disabled</key>
 				<false/>
 				<key>Find</key>
 				<data>
-				SIX/dEdIiwc=
+				g33EBHQG
 				</data>
 				<key>Name</key>
-				<string>IOBluetoothFamily</string>
+				<string>AirPortBrcm4360</string>
 				<key>Replace</key>
 				<data>
-				Qb4PAAAA60Q=
+				g33EBGaQ
+				</data>
+			</dict>
+			<dict>
+				<key>Comment</key>
+				<string>AirPort Extreme</string>
+				<key>Disabled</key>
+				<false/>
+				<key>Find</key>
+				<data>
+				axAAAHUN
+				</data>
+				<key>Name</key>
+				<string>AirPortBrcm4360</string>
+				<key>Replace</key>
+				<data>
+				axAAAJCQ
+				</data>
+			</dict>
+			<dict>
+				<key>Comment</key>
+				<string>AirPortBrcm4360 Patch 2</string>
+				<key>Disabled</key>
+				<false/>
+				<key>Find</key>
+				<data>
+				QQ+3zTnBdQw=
+				</data>
+				<key>Name</key>
+				<string>AirPortBrcm4360</string>
+				<key>Replace</key>
+				<data>
+				QQ+3zTnBZpA=
 				</data>
 			</dict>
 		</array>
